# MEMO-H506

./: .gitignore  README.md  main.py  pyproject.toml  todos.md
examples/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
examples/BORDET/: configuration_Bordet.toml  example_BORDET.ipynb
examples/BORDET/.ipynb_checkpoints/: example_BORDET-checkpoint.ipynb
examples/FLASH/: configuration_ELBE.toml  configuration_Oxford.toml  flash_litterature.ipynb
examples/FLASH/.ipynb_checkpoints/: configuration_Bordet-checkpoint.toml  configuration_ELBE-checkpoint.toml  flash_litterature-checkpoint.ipynb
examples/LABARBE/: sim_LABARBE.ipynb
examples/LABARBE/.ipynb_checkpoints/: config_SiongTan-checkpoint.toml  sim_LABARBE-checkpoint.ipynb
examples/PFAS/: PFAS_sim.ipynb  configuration_PFAS.toml  configuration_PFAS_basic.toml
examples/PFAS/.ipynb_checkpoints/: PFAS_sim-checkpoint.ipynb  configuration_PFAS-checkpoint.toml  configuration_PFAS_basic-checkpoint.toml
examples/PULSESTRUCT/: configuration_PULSESTRUCT.toml  pulse_struct_NETWORK.ipynb
examples/PULSESTRUCT/.ipynb_checkpoints/: configuration_PULSESTRUCT-checkpoint.toml  pulse_struct_NETWORK-checkpoint.ipynb
examples/UPENN/: UPENN_sim.ipynb  configuration_UPENN.toml
radiopyo/: __init__.py  test.py
radiopyo/chemistry/: __init__.py  acid_base.py  base_chemistry.py  exceptions.py  k_reactions.py  michaelis.py  radiolytic.py  species.py
radiopyo/chemistry/utils/: __init__.py  atomic_weights.py
radiopyo/data/: reactions_Labarbe.ron
radiopyo/data/.ipynb_checkpoints/: basic_water_radiolysis-checkpoint.toml  config_Labarbe-checkpoint.toml  reactions_biology-checkpoint.toml
radiopyo/data/G_VALUES/: gvalues_from_Boscolo_2020.csv
radiopyo/data/energy_LET/: electron_LET.csv
radiopyo/data/masses/: _data_atomic_weights.txt  _data_isotope_masses.txt
radiopyo/parser/: __init__.py  file_parser.py  reaction_parser.py  ron.py  toml.py  utils.py
radiopyo/parser/.ipynb_checkpoints/: file_parser-checkpoint.py
radiopyo/parser/grammar/: reaction_grammar.lark  ron_grammar.lark
radiopyo/physics/: __init__.py  beam.py  exceptions.py
radiopyo/simulation/: __init__.py  exceptions.py  ode_result.py  unit_cell.py  utils.py
radiopyo/simulation/.ipynb_checkpoints/: environment_build-checkpoint.py  ode_functions_solver-checkpoint.py
radiopyo/utils/: __init__.py  e_LET.py  g_values.py  logging.py  sim_types.py  useful_path.py
tests/chemistry/: test_k_reactions.py  test_radiolytic.py
tests/output/: Gi_matrix.csv  Ri_matrix.csv  Riy_matrix.csv
tests/physics/: test_beam.py
tests/utils/: test_ron_parser.py
(+1 files in other folders)
